<?xml version="1.0"?>
<package format="2">
  <name>active_mapping</name>
  <version>0.0.0</version>
  <description>The active_mapping package for 3DGS Active Exploration</description>

  <maintainer email="xhy@todo.todo">xhy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>tf</depend>

</package>
